@@ -181,5 +181,6 @@
 	* tools/Makefile.mkconfig: Under Cygwin, executable has a different name
 	* tools/mkdeps.sh & arch/arm/src/Makefile: Corrected a problem makeing dependencies
 	* tools/zipme.sh: Force directory name to be nuttx-xx.yy.zz
+	* fs/fs_opendir.c: Correct errors in semaphore usage that can cause deadlock.
 	* Started m68322
 
